--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -2389,40 +2389,102 @@
 
       function updateCostRail() {
         let totalContentBytes = 0;
+        const encoder = new TextEncoder();
+
+        // Estimate section wrapper bytes by mirroring compiler logic
+        function estimateSectionWrapper(block) {
+            const styles = [];
+            if (block.dataset.background) styles.push(`--sb:${block.dataset.background}`);
+            if (block.dataset.color) styles.push(`--sc:${block.dataset.color}`);
+            if (block.dataset.patternColor && block.dataset.patternOpacity) {
+                const hex = block.dataset.patternColor;
+                const op = block.dataset.patternOpacity;
+                const r = parseInt(hex.substring(1, 3), 16);
+                const g = parseInt(hex.substring(3, 5), 16);
+                const b = parseInt(hex.substring(5, 7), 16);
+                styles.push(`--pc:rgba(${r},${g},${b},${op})`);
+            }
+            if (block.dataset.width) styles.push(`--sw:${block.dataset.width}`);
+            if (block.dataset.padding) styles.push(`--sp:${block.dataset.padding}`);
+            if (block.dataset.align) styles.push(`--sa:${block.dataset.align}`);
+            const styleAttr = styles.length > 0 ? ` style="${styles.join(';')}"` : '';
+
+            let cls = 'section';
+            const p = block.dataset.pattern;
+            if (p === 'dots') cls += ' bg-pattern-dots';
+            else if (p === 'grid') cls += ' bg-pattern-grid';
+            else if (p === 'stripes') cls += ' bg-pattern-stripes';
+            else if (p === 'cross') cls += ' bg-pattern-cross';
+            else if (p === 'hexagons') cls += ' bg-pattern-hexagons';
+
+            // <div class="..."[ style="..."]></div>
+            return encoder.encode(`<div class="${cls}"${styleAttr}></div>`).length;
+        }
+
+        // Estimate content bytes for a non-section block
+        function estimateBlockBytes(block) {
+            const type = block.dataset.type;
+            if (type === 'divider') return 4; // <hr>
+            if (type === 'bloglist') return 50; // placeholder estimate
+
+            const content = block.querySelector('.block-content');
+            if (type === 'codeblock') {
+                // Code has no inline formatting — use textContent
+                const text = content ? content.textContent : '';
+                return encoder.encode(text).length + 24; // <pre><code></code></pre>
+            }
+
+            // For other blocks, innerHTML captures inline formatting
+            const inner = content ? content.innerHTML : '';
+            const innerBytes = encoder.encode(inner).length;
+
+            if (type === 'heading') return innerBytes + 9;    // <hN></hN>
+            if (type === 'blockquote') return innerBytes + 28; // <blockquote><p></p></blockquote>
+
+            if (type === 'list' || type === 'unordered-list' || type === 'ordered-list') {
+                const listEl = block.querySelector('.editable-list');
+                if (!listEl) return 9;
+                let bytes = 9; // <ul></ul> or <ol></ol>
+                listEl.querySelectorAll('li').forEach(li => {
+                    bytes += encoder.encode(li.innerHTML).length + 9; // <li></li>
+                });
+                return bytes;
+            }
+
+            return innerBytes + 7; // <p></p> (paragraph / default)
+        }
 
         // Recursive helper to calculate bytes for a block and its children
         function processBlock(block) {
             const type = block.dataset.type;
-            const level = block.dataset.level;
-            const listType = block.dataset.listType;
             let bytes = 0;
             let label = 'Block';
 
             if (type === 'section') {
                 label = 'Section';
-                // Estimate overhead for section wrapper, styles, attributes
-                bytes = 150; 
+                bytes = estimateSectionWrapper(block);
 
-                // Sum children bytes recursively
+                // Sum children bytes recursively, plus newlines between them
                 const childrenWrapper = block.querySelector('.section-blocks');
                 if (childrenWrapper) {
                     const children = childrenWrapper.querySelectorAll(':scope > .block-item');
+                    let childCount = 0;
                     children.forEach(child => {
                         bytes += processBlock(child);
+                        childCount++;
                     });
+                    if (childCount > 1) bytes += childCount - 1; // \n between children
                 }
             } else {
-                // Standard text/content block
-                const content = block.querySelector('.block-content');
-                const text = content ? content.textContent.trim() : '';
-                bytes = new TextEncoder().encode(text).length + 40; // +markup overhead
+                bytes = estimateBlockBytes(block);
 
                 // Labels
+                const level = block.dataset.level;
+                const listType = block.dataset.listType;
                 if (type === 'heading') label = `H${level}`;
                 else if (type === 'paragraph') label = 'Paragraph';
                 else if (type === 'bloglist') label = 'Bloglist';
                 else if (type === 'list' || type === 'unordered-list') {
-                   // Legacy check or explicit type
                    if (listType === 'ordered' || type === 'ordered-list') label = 'OL';
                    else label = 'UL';
                 }
@@ -2432,7 +2494,6 @@
             }
 
             // Update this block's indicator
-            // We use :scope > to ensure we target THIS block's indicator, not a child's
             let byteIndicator = block.querySelector(':scope > .block-byte-indicator');
             if (byteIndicator) {
                 byteIndicator.innerHTML = `<span>${label}</span><span>${formatBytes(bytes)}</span>`;
@@ -2442,11 +2503,15 @@
         }
 
         // Only iterate TOP-LEVEL blocks in the editor
-        // We use :scope to prevent double-counting children found by querySelectorAll
         const topLevelBlocks = blockEditor.querySelectorAll(':scope > .block-item');
         topLevelBlocks.forEach(block => {
              totalContentBytes += processBlock(block);
         });
+
+        // Newlines between top-level blocks
+        if (topLevelBlocks.length > 1) {
+            totalContentBytes += topLevelBlocks.length - 1;
+        }
 
         // Update content total
         costContentTotal.textContent = formatBytes(totalContentBytes);
