--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -816,8 +816,8 @@
             // Update preview colors
             const preview = el.querySelector('.section-preview');
             if (preview) {
-              preview.style.backgroundColor = block.background || '#1a1a1a';
-              preview.style.color = block.color || '#ffffff';
+              preview.style.backgroundColor = block.background || '#ffffff';
+              preview.style.color = block.color || '#000000';
               preview.style.textAlign = block.align || '';
               if (block.padding) preview.style.setProperty('--sp', block.padding);
               const pClass = Compiler.getPatternClass(block.pattern || '');
@@ -859,38 +859,99 @@
                 const cellEl = document.createElement('div');
                 cellEl.className = 'layout-cell';
 
+                // Alignment controls
+                const alignBar = document.createElement('div');
+                alignBar.className = 'layout-cell-align';
+                ['left', 'center', 'right'].forEach(align => {
+                  const abtn = document.createElement('button');
+                  abtn.type = 'button';
+                  abtn.className = 'layout-align-btn';
+                  abtn.dataset.align = align;
+                  const svgs = {
+                    left: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="7" x2="9" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="11" x2="11" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
+                    center: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="7" x2="11" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="2" y1="11" x2="12" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
+                    right: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="5" y1="7" x2="13" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="11" x2="13" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>'
+                  };
+                  abtn.innerHTML = svgs[align];
+                  abtn.title = 'Align ' + align;
+                  if (cellData.textAlign === align) abtn.classList.add('active');
+                  abtn.addEventListener('click', (e) => {
+                    e.stopPropagation();
+                    cellEl.dataset.textAlign = align;
+                    cellEl.style.textAlign = align;
+                    alignBar.querySelectorAll('.layout-align-btn').forEach(b => b.classList.remove('active'));
+                    abtn.classList.add('active');
+                    debouncedPreview();
+                  });
+                  alignBar.appendChild(abtn);
+                });
+                cellEl.appendChild(alignBar);
+
+                // Restore alignment
+                if (cellData.textAlign) {
+                  cellEl.dataset.textAlign = cellData.textAlign;
+                  cellEl.style.textAlign = cellData.textAlign;
+                }
+
                 const cellBlocks = document.createElement('div');
                 cellBlocks.className = 'layout-cell-blocks';
                 if (cellData.children && cellData.children.length > 0) {
-                  cellData.children.forEach(child => {
-                    cellBlocks.appendChild(blockElFromSource(child));
+                  // Only restore first child (one block per cell)
+                  const child = cellData.children[0];
+                  const childBlock = blockElFromSource(child);
+                  // Add × delete button
+                  const delBtn = document.createElement('button');
+                  delBtn.type = 'button';
+                  delBtn.className = 'block-cell-delete';
+                  delBtn.textContent = '×';
+                  delBtn.title = 'Delete';
+                  delBtn.addEventListener('click', () => {
+                    childBlock.remove();
+                    debouncedPreview();
                   });
+                  childBlock.appendChild(delBtn);
+                  cellBlocks.appendChild(childBlock);
                 }
                 cellEl.appendChild(cellBlocks);
 
-                // Add block button
+                // Add block button with type picker
                 const addBtn = document.createElement('button');
                 addBtn.type = 'button';
                 addBtn.className = 'layout-cell-add-btn';
                 addBtn.textContent = '+';
                 addBtn.title = 'Add block';
-                
+
                 const dropdown = document.createElement('div');
-                dropdown.className = 'add-block-dropdown hidden';
+                dropdown.className = 'layout-cell-dropdown hidden';
                 const innerTypes = [
                   { type: 'paragraph', label: 'Paragraph' },
                   { type: 'heading', label: 'Heading', level: '2' },
                   { type: 'list', label: 'List', listType: 'unordered' },
-                  { type: 'divider', label: 'Divider' },
-                  { type: 'bloglist', label: 'Bloglist' }
+                  { type: 'divider', label: 'Divider' }
                 ];
                 innerTypes.forEach(t => {
                   const b = document.createElement('button');
                   b.type = 'button';
                   b.textContent = t.label;
-                  b.dataset.type = t.type;
-                  if (t.level) b.dataset.level = t.level;
-                  if (t.listType) b.dataset.listType = t.listType;
+                  b.addEventListener('click', (e) => {
+                    e.stopPropagation();
+                    const newBlock = createBlockElement(t.type, t.level, '', t.listType);
+                    const del = document.createElement('button');
+                    del.type = 'button';
+                    del.className = 'block-cell-delete';
+                    del.textContent = '×';
+                    del.title = 'Delete';
+                    del.addEventListener('click', () => {
+                      newBlock.remove();
+                      debouncedPreview();
+                    });
+                    newBlock.appendChild(del);
+                    cellBlocks.appendChild(newBlock);
+                    dropdown.classList.add('hidden');
+                    const focusTarget = newBlock.querySelector('li[contenteditable="true"]') || newBlock.querySelector('.block-content');
+                    if (focusTarget) focusTarget.focus();
+                    debouncedPreview();
+                  });
                   dropdown.appendChild(b);
                 });
 
@@ -898,17 +959,7 @@
                   e.stopPropagation();
                   dropdown.classList.toggle('hidden');
                 });
-
-                dropdown.addEventListener('click', (e) => {
-                  const clicked = e.target.closest('button');
-                  if (!clicked) return;
-                  const childBlock = createBlockElement(clicked.dataset.type, clicked.dataset.level, '', clicked.dataset.listType);
-                  cellBlocks.appendChild(childBlock);
-                  const focusTarget = childBlock.querySelector('li[contenteditable="true"]') || childBlock.querySelector('.block-content');
-                  if (focusTarget) focusTarget.focus();
-                  dropdown.classList.add('hidden');
-                  debouncedPreview();
-                });
+                document.addEventListener('click', () => dropdown.classList.add('hidden'));
 
                 cellEl.appendChild(addBtn);
                 cellEl.appendChild(dropdown);
@@ -1453,7 +1504,7 @@
           bgLabel.innerHTML = '<span data-i18n="editor.sectionBackground">Background</span>:';
           const bgInput = document.createElement('input');
           bgInput.type = 'color';
-          bgInput.value = '#1a1a1a';
+          bgInput.value = '#ffffff';
           bgInput.addEventListener('input', () => {
             block.dataset.background = bgInput.value;
             preview.style.backgroundColor = bgInput.value;
@@ -1467,7 +1518,7 @@
           colorLabel.innerHTML = '<span data-i18n="editor.sectionTextColor">Text Color</span>:';
           const colorInput = document.createElement('input');
           colorInput.type = 'color';
-          colorInput.value = '#ffffff';
+          colorInput.value = '#000000';
           colorInput.addEventListener('input', () => {
             block.dataset.color = colorInput.value;
             preview.style.color = colorInput.value;
@@ -1618,8 +1669,8 @@
           // Preview area with section background
           const preview = document.createElement('div');
           preview.className = 'section-preview';
-          preview.style.backgroundColor = '#1a1a1a';
-          preview.style.color = '#ffffff';
+          preview.style.backgroundColor = '#ffffff';
+          preview.style.color = '#000000';
 
           const sectionBlocks = document.createElement('div');
           sectionBlocks.className = 'section-blocks';
@@ -1685,6 +1736,9 @@
           // Column controls (absolutely positioned inside cellsGrid)
           const colControls = document.createElement('div');
           colControls.className = 'layout-col-controls';
+          const colLabel = document.createElement('span');
+          colLabel.className = 'layout-control-label';
+          colLabel.textContent = 'Col';
           const removeColBtn = document.createElement('button');
           removeColBtn.type = 'button';
           removeColBtn.className = 'layout-control-btn';
@@ -1708,12 +1762,16 @@
             rebuildGrid();
           });
           colControls.appendChild(removeColBtn);
+          colControls.appendChild(colLabel);
           colControls.appendChild(addColBtn);
           cellsGrid.appendChild(colControls);
 
           // Row controls (absolutely positioned inside cellsGrid)
           const rowControls = document.createElement('div');
           rowControls.className = 'layout-row-controls';
+          const rowLabel = document.createElement('span');
+          rowLabel.className = 'layout-control-label';
+          rowLabel.textContent = 'Row';
           const removeRowBtn = document.createElement('button');
           removeRowBtn.type = 'button';
           removeRowBtn.className = 'layout-control-btn';
@@ -1737,6 +1795,7 @@
             rebuildGrid();
           });
           rowControls.appendChild(removeRowBtn);
+          rowControls.appendChild(rowLabel);
           rowControls.appendChild(addRowBtn);
           cellsGrid.appendChild(rowControls);
 
@@ -1775,11 +1834,38 @@
             const cell = document.createElement('div');
             cell.className = 'layout-cell';
 
+            // Alignment controls
+            const alignBar = document.createElement('div');
+            alignBar.className = 'layout-cell-align';
+            ['left', 'center', 'right'].forEach(align => {
+              const btn = document.createElement('button');
+              btn.type = 'button';
+              btn.className = 'layout-align-btn';
+              btn.dataset.align = align;
+              const svgs = {
+                left: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="7" x2="9" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="11" x2="11" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
+                center: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="7" x2="11" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="2" y1="11" x2="12" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
+                right: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="5" y1="7" x2="13" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="11" x2="13" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>'
+              };
+              btn.innerHTML = svgs[align];
+              btn.title = 'Align ' + align;
+              btn.addEventListener('click', (e) => {
+                e.stopPropagation();
+                cell.dataset.textAlign = align;
+                cell.style.textAlign = align;
+                alignBar.querySelectorAll('.layout-align-btn').forEach(b => b.classList.remove('active'));
+                btn.classList.add('active');
+                if (debouncedPreview) debouncedPreview();
+              });
+              alignBar.appendChild(btn);
+            });
+            cell.appendChild(alignBar);
+
             const cellBlocks = document.createElement('div');
             cellBlocks.className = 'layout-cell-blocks';
             cell.appendChild(cellBlocks);
 
-            // Add block button
+            // Add block button with type picker
             const addBtn = document.createElement('button');
             addBtn.type = 'button';
             addBtn.className = 'layout-cell-add-btn';
@@ -1787,21 +1873,37 @@
             addBtn.title = 'Add block';
 
             const dropdown = document.createElement('div');
-            dropdown.className = 'add-block-dropdown hidden';
+            dropdown.className = 'layout-cell-dropdown hidden';
             const innerTypes = [
               { type: 'paragraph', label: 'Paragraph' },
               { type: 'heading', label: 'Heading', level: '2' },
               { type: 'list', label: 'List', listType: 'unordered' },
-              { type: 'divider', label: 'Divider' },
-              { type: 'bloglist', label: 'Bloglist' }
+              { type: 'divider', label: 'Divider' }
             ];
             innerTypes.forEach(t => {
               const b = document.createElement('button');
               b.type = 'button';
               b.textContent = t.label;
-              b.dataset.type = t.type;
-              if (t.level) b.dataset.level = t.level;
-              if (t.listType) b.dataset.listType = t.listType;
+              b.addEventListener('click', (e) => {
+                e.stopPropagation();
+                const childBlock = createBlockElement(t.type, t.level, '', t.listType);
+                // Add × delete button
+                const delBtn = document.createElement('button');
+                delBtn.type = 'button';
+                delBtn.className = 'block-cell-delete';
+                delBtn.textContent = '×';
+                delBtn.title = 'Delete';
+                delBtn.addEventListener('click', () => {
+                  childBlock.remove();
+                  if (debouncedPreview) debouncedPreview();
+                });
+                childBlock.appendChild(delBtn);
+                cellBlocks.appendChild(childBlock);
+                dropdown.classList.add('hidden');
+                const focusTarget = childBlock.querySelector('li[contenteditable="true"]') || childBlock.querySelector('.block-content');
+                if (focusTarget) focusTarget.focus();
+                if (debouncedPreview) debouncedPreview();
+              });
               dropdown.appendChild(b);
             });
 
@@ -1810,18 +1912,8 @@
               dropdown.classList.toggle('hidden');
             });
 
-            dropdown.addEventListener('click', (e) => {
-              const clicked = e.target.closest('button');
-              if (!clicked) return;
-              const childBlock = createBlockElement(clicked.dataset.type, clicked.dataset.level, '', clicked.dataset.listType);
-              cellBlocks.appendChild(childBlock);
-              const focusTarget = childBlock.querySelector('li[contenteditable="true"]') || childBlock.querySelector('.block-content');
-              if (focusTarget) focusTarget.focus();
-              dropdown.classList.add('hidden');
-              if (debouncedPreview) {
-                debouncedPreview();
-              }
-            });
+            // Close dropdown on outside click
+            document.addEventListener('click', () => dropdown.classList.add('hidden'));
 
             cell.appendChild(addBtn);
             cell.appendChild(dropdown);
@@ -2491,7 +2583,7 @@
             for (const childBlock of cellBlocks.querySelectorAll(':scope > .block-item')) {
               children.push(serializeBlock(childBlock));
             }
-            cells.push({ children });
+            cells.push({ children, textAlign: cell.dataset.textAlign || null });
           }
           return {
             type: 'layout',
