--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -743,6 +743,13 @@
         }).join('');
       }
 
+      // SVG icons for alignment buttons (shared by createBlockElement and blockElFromSource)
+      const alignSvgs = {
+        left: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="7" x2="9" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="11" x2="11" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
+        center: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="7" x2="11" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="2" y1="11" x2="12" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
+        right: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="5" y1="7" x2="13" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="11" x2="13" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>'
+      };
+
       // Load editor state from source JSON (compiler format)
       function loadFromSource(sourceData) {
         // Restore basic fields
@@ -859,33 +866,80 @@
                 const cellEl = document.createElement('div');
                 cellEl.className = 'layout-cell';
 
-                // Alignment controls
-                const alignBar = document.createElement('div');
-                alignBar.className = 'layout-cell-align';
+                // Cell toolbar
+                const toolbar = document.createElement('div');
+                toolbar.className = 'layout-cell-toolbar';
+
+                // Alignment buttons
+                const alignGroup = document.createElement('div');
+                alignGroup.className = 'layout-toolbar-group';
                 ['left', 'center', 'right'].forEach(align => {
                   const abtn = document.createElement('button');
                   abtn.type = 'button';
                   abtn.className = 'layout-align-btn';
                   abtn.dataset.align = align;
-                  const svgs = {
-                    left: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="7" x2="9" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="11" x2="11" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
-                    center: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="7" x2="11" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="2" y1="11" x2="12" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
-                    right: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="5" y1="7" x2="13" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="11" x2="13" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>'
-                  };
-                  abtn.innerHTML = svgs[align];
+                  abtn.innerHTML = alignSvgs[align];
                   abtn.title = 'Align ' + align;
                   if (cellData.textAlign === align) abtn.classList.add('active');
                   abtn.addEventListener('click', (e) => {
                     e.stopPropagation();
                     cellEl.dataset.textAlign = align;
                     cellEl.style.textAlign = align;
-                    alignBar.querySelectorAll('.layout-align-btn').forEach(b => b.classList.remove('active'));
+                    alignGroup.querySelectorAll('.layout-align-btn').forEach(b => b.classList.remove('active'));
                     abtn.classList.add('active');
                     debouncedPreview();
                   });
-                  alignBar.appendChild(abtn);
+                  alignGroup.appendChild(abtn);
                 });
-                cellEl.appendChild(alignBar);
+                toolbar.appendChild(alignGroup);
+
+                // Padding input
+                const padGroup = document.createElement('label');
+                padGroup.className = 'layout-toolbar-input';
+                padGroup.innerHTML = '<span>P</span>';
+                const padInput = document.createElement('input');
+                padInput.type = 'text';
+                padInput.placeholder = '0';
+                padInput.title = 'Padding';
+                if (cellData.padding) { padInput.value = cellData.padding; cellEl.dataset.padding = cellData.padding; }
+                padInput.addEventListener('input', () => {
+                  cellEl.dataset.padding = padInput.value.trim();
+                  debouncedPreview();
+                });
+                padGroup.appendChild(padInput);
+                toolbar.appendChild(padGroup);
+
+                // Margin input
+                const marGroup = document.createElement('label');
+                marGroup.className = 'layout-toolbar-input';
+                marGroup.innerHTML = '<span>M</span>';
+                const marInput = document.createElement('input');
+                marInput.type = 'text';
+                marInput.placeholder = '0';
+                marInput.title = 'Margin';
+                if (cellData.margin) { marInput.value = cellData.margin; cellEl.dataset.margin = cellData.margin; }
+                marInput.addEventListener('input', () => {
+                  cellEl.dataset.margin = marInput.value.trim();
+                  debouncedPreview();
+                });
+                marGroup.appendChild(marInput);
+                toolbar.appendChild(marGroup);
+
+                // Delete button
+                const delBtn = document.createElement('button');
+                delBtn.type = 'button';
+                delBtn.className = 'layout-toolbar-delete';
+                delBtn.textContent = '×';
+                delBtn.title = 'Delete block';
+                delBtn.addEventListener('click', (e) => {
+                  e.stopPropagation();
+                  const cb = cellEl.querySelector('.layout-cell-blocks');
+                  cb.innerHTML = '';
+                  debouncedPreview();
+                });
+                toolbar.appendChild(delBtn);
+
+                cellEl.appendChild(toolbar);
 
                 // Restore alignment
                 if (cellData.textAlign) {
@@ -896,21 +950,8 @@
                 const cellBlocks = document.createElement('div');
                 cellBlocks.className = 'layout-cell-blocks';
                 if (cellData.children && cellData.children.length > 0) {
-                  // Only restore first child (one block per cell)
                   const child = cellData.children[0];
-                  const childBlock = blockElFromSource(child);
-                  // Add × delete button
-                  const delBtn = document.createElement('button');
-                  delBtn.type = 'button';
-                  delBtn.className = 'block-cell-delete';
-                  delBtn.textContent = '×';
-                  delBtn.title = 'Delete';
-                  delBtn.addEventListener('click', () => {
-                    childBlock.remove();
-                    debouncedPreview();
-                  });
-                  childBlock.appendChild(delBtn);
-                  cellBlocks.appendChild(childBlock);
+                  cellBlocks.appendChild(blockElFromSource(child));
                 }
                 cellEl.appendChild(cellBlocks);
 
@@ -936,16 +977,6 @@
                   b.addEventListener('click', (e) => {
                     e.stopPropagation();
                     const newBlock = createBlockElement(t.type, t.level, '', t.listType);
-                    const del = document.createElement('button');
-                    del.type = 'button';
-                    del.className = 'block-cell-delete';
-                    del.textContent = '×';
-                    del.title = 'Delete';
-                    del.addEventListener('click', () => {
-                      newBlock.remove();
-                      debouncedPreview();
-                    });
-                    newBlock.appendChild(del);
                     cellBlocks.appendChild(newBlock);
                     dropdown.classList.add('hidden');
                     const focusTarget = newBlock.querySelector('li[contenteditable="true"]') || newBlock.querySelector('.block-content');
@@ -1834,32 +1865,77 @@
             const cell = document.createElement('div');
             cell.className = 'layout-cell';
 
-            // Alignment controls
-            const alignBar = document.createElement('div');
-            alignBar.className = 'layout-cell-align';
+            // Cell toolbar (alignment, padding, margin, delete)
+            const toolbar = document.createElement('div');
+            toolbar.className = 'layout-cell-toolbar';
+
+            // Alignment buttons
+            const alignGroup = document.createElement('div');
+            alignGroup.className = 'layout-toolbar-group';
             ['left', 'center', 'right'].forEach(align => {
               const btn = document.createElement('button');
               btn.type = 'button';
               btn.className = 'layout-align-btn';
               btn.dataset.align = align;
-              const svgs = {
-                left: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="7" x2="9" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="1" y1="11" x2="11" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
-                center: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="7" x2="11" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="2" y1="11" x2="12" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>',
-                right: '<svg width="14" height="14" viewBox="0 0 14 14"><line x1="1" y1="3" x2="13" y2="3" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="5" y1="7" x2="13" y2="7" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/><line x1="3" y1="11" x2="13" y2="11" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/></svg>'
-              };
-              btn.innerHTML = svgs[align];
+              btn.innerHTML = alignSvgs[align];
               btn.title = 'Align ' + align;
               btn.addEventListener('click', (e) => {
                 e.stopPropagation();
                 cell.dataset.textAlign = align;
                 cell.style.textAlign = align;
-                alignBar.querySelectorAll('.layout-align-btn').forEach(b => b.classList.remove('active'));
+                alignGroup.querySelectorAll('.layout-align-btn').forEach(b => b.classList.remove('active'));
                 btn.classList.add('active');
                 if (debouncedPreview) debouncedPreview();
               });
-              alignBar.appendChild(btn);
+              alignGroup.appendChild(btn);
             });
-            cell.appendChild(alignBar);
+            toolbar.appendChild(alignGroup);
+
+            // Padding input
+            const padGroup = document.createElement('label');
+            padGroup.className = 'layout-toolbar-input';
+            padGroup.innerHTML = '<span>P</span>';
+            const padInput = document.createElement('input');
+            padInput.type = 'text';
+            padInput.placeholder = '0';
+            padInput.title = 'Padding (z.B. 1rem, 8px)';
+            padInput.addEventListener('input', () => {
+              cell.dataset.padding = padInput.value.trim();
+              if (debouncedPreview) debouncedPreview();
+            });
+            padGroup.appendChild(padInput);
+            toolbar.appendChild(padGroup);
+
+            // Margin input
+            const marGroup = document.createElement('label');
+            marGroup.className = 'layout-toolbar-input';
+            marGroup.innerHTML = '<span>M</span>';
+            const marInput = document.createElement('input');
+            marInput.type = 'text';
+            marInput.placeholder = '0';
+            marInput.title = 'Margin (z.B. 1rem, 8px)';
+            marInput.addEventListener('input', () => {
+              cell.dataset.margin = marInput.value.trim();
+              if (debouncedPreview) debouncedPreview();
+            });
+            marGroup.appendChild(marInput);
+            toolbar.appendChild(marGroup);
+
+            // Delete button
+            const delBtn = document.createElement('button');
+            delBtn.type = 'button';
+            delBtn.className = 'layout-toolbar-delete';
+            delBtn.textContent = '×';
+            delBtn.title = 'Delete block';
+            delBtn.addEventListener('click', (e) => {
+              e.stopPropagation();
+              const cellBlocks = cell.querySelector('.layout-cell-blocks');
+              cellBlocks.innerHTML = '';
+              if (debouncedPreview) debouncedPreview();
+            });
+            toolbar.appendChild(delBtn);
+
+            cell.appendChild(toolbar);
 
             const cellBlocks = document.createElement('div');
             cellBlocks.className = 'layout-cell-blocks';
@@ -1887,17 +1963,6 @@
               b.addEventListener('click', (e) => {
                 e.stopPropagation();
                 const childBlock = createBlockElement(t.type, t.level, '', t.listType);
-                // Add × delete button
-                const delBtn = document.createElement('button');
-                delBtn.type = 'button';
-                delBtn.className = 'block-cell-delete';
-                delBtn.textContent = '×';
-                delBtn.title = 'Delete';
-                delBtn.addEventListener('click', () => {
-                  childBlock.remove();
-                  if (debouncedPreview) debouncedPreview();
-                });
-                childBlock.appendChild(delBtn);
                 cellBlocks.appendChild(childBlock);
                 dropdown.classList.add('hidden');
                 const focusTarget = childBlock.querySelector('li[contenteditable="true"]') || childBlock.querySelector('.block-content');
@@ -1911,8 +1976,6 @@
               e.stopPropagation();
               dropdown.classList.toggle('hidden');
             });
-
-            // Close dropdown on outside click
             document.addEventListener('click', () => dropdown.classList.add('hidden'));
 
             cell.appendChild(addBtn);
@@ -2583,7 +2646,12 @@
             for (const childBlock of cellBlocks.querySelectorAll(':scope > .block-item')) {
               children.push(serializeBlock(childBlock));
             }
-            cells.push({ children, textAlign: cell.dataset.textAlign || null });
+            cells.push({
+              children,
+              textAlign: cell.dataset.textAlign || null,
+              padding: cell.dataset.padding || null,
+              margin: cell.dataset.margin || null
+            });
           }
           return {
             type: 'layout',
