feat: Update grid layout styles for improved responsiveness and accessibility

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -1034,7 +1034,7 @@
 
               // Update grid styling
               cellsGrid.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
-              cellsGrid.style.gridTemplateRows = `repeat(${rows}, 1fr)`;
+              cellsGrid.style.gridTemplateRows = `repeat(${rows}, auto)`;
             }
 
             return el;
@@ -1895,7 +1895,7 @@
             const cols = parseInt(block.dataset.columns);
             const rows = parseInt(block.dataset.rows);
             cellsGrid.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
-            cellsGrid.style.gridTemplateRows = `repeat(${rows}, 1fr)`;
+            cellsGrid.style.gridTemplateRows = `repeat(${rows}, auto)`;
 
             const totalCells = cols * rows;
             const currentCells = cellsGrid.querySelectorAll(':scope > .layout-cell');
@@ -2974,7 +2974,9 @@
             }).join('\n');
 
             const styles = [];
-            styles.push('display:grid');
+            styles.push('display:inline-grid');
+            styles.push('width:fit-content');
+            styles.push('max-width:100%');
             styles.push(`grid-template-columns:repeat(${blockData.columns},1fr)`);
             if (blockData.rows) {
               styles.push(`grid-template-rows:repeat(${blockData.rows},auto)`);
